Increased VSCode line height to 50

--- a/vscode/vscode_settings.json
+++ b/vscode/vscode_settings.json
@@ -36,5 +36,6 @@
     "materialTheme.accent": "Purple",
     "explorer.confirmDragAndDrop": false,
     "workbench.iconTheme": "eq-material-theme-icons-palenight",
-    "editor.lineHeight": 40
+    "editor.lineHeight": 50,
+    "git.autofetch": true
 }
