--- a/vscode/vscode_settings.json
+++ b/vscode/vscode_settings.json
@@ -1,11 +1,10 @@
 {
     "workbench.startupEditor": "newUntitledFile",
     "workbench.colorTheme": "Material Theme Palenight High Contrast",
-    "editor.fontSize": 20,
+    "editor.fontSize": 18,
     "debug.console.fontSize": 18,
     "markdown.preview.fontSize": 18,
     "terminal.integrated.fontSize": 18,
-    "editor.minimap.enabled": false,
     "workbench.editor.enablePreview": false,
     "workbench.editor.enablePreviewFromQuickOpen": false,
     "workbench.colorCustomizations": {
@@ -38,5 +37,7 @@
     "workbench.iconTheme": "eq-material-theme-icons-palenight",
     "editor.lineHeight": 50,
     "git.autofetch": true,
-    "extensions.ignoreRecommendations": true
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "window.zoomLevel": 0,
+    "mesonbuild.configureOnOpen": false
 }
