--- a/vscode/vscode_settings.json
+++ b/vscode/vscode_settings.json
@@ -39,5 +39,7 @@
     "git.autofetch": true,
     "javascript.updateImportsOnFileMove.enabled": "always",
     "window.zoomLevel": 0,
-    "mesonbuild.configureOnOpen": false
+    "mesonbuild.configureOnOpen": false,
+    "terminal.integrated.shell.linux": "/usr/bin/env",
+    "terminal.integrated.shellArgs.linux": ["--", "flatpak-spawn", "--host", "zsh"]
 }
