Revert "Updated vscode dots for flatpak"
This reverts commit d57591deab0ab9c38b6cd661000da94ca15ddd33.

--- a/vscode/vscode_settings.json
+++ b/vscode/vscode_settings.json
@@ -39,7 +39,5 @@
     "git.autofetch": true,
     "javascript.updateImportsOnFileMove.enabled": "always",
     "window.zoomLevel": 0,
-    "mesonbuild.configureOnOpen": false,
-    "terminal.integrated.shell.linux": "/usr/bin/env",
-    "terminal.integrated.shellArgs.linux": ["--", "flatpak-spawn", "--host", "zsh"]
+    "mesonbuild.configureOnOpen": false
 }
